--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 01:39:00 PM</p>
+    <p class="lastupdate">09/20/2020 01:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.5&#176;F</td>
+        <td class="data">87.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.055)</td>
+        <td class="data">29.844 inHg (-0.055)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph W (270&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:45:01 AM">
             29.913</span><br/>
-          <span title="01:36:01 PM">
-            29.845</span>
+          <span title="01:40:01 PM">
+            29.843</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:45:01 AM (Sunday)">
             29.913</span><br/>
-          <span title="01:36:01 PM (Sunday)">
-            29.845</span>
+          <span title="01:40:01 PM (Sunday)">
+            29.843</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          4
+          3
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          4
+          3
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:32:01 PM">
-            81.0</span><br/>
+          <span title="01:42:01 PM">
+            81.1</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:32:01 PM (Sunday)">
-            81.0</span><br/>
+          <span title="01:42:01 PM (Sunday)">
+            81.1</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">68%</td>
+      <td class="data">64%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 5 hours, 52 minutes</td>
+      <td class="data">0 days, 5 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 5 hours, 52 minutes</td>
+      <td class="data">0 days, 5 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
