--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 01:59:00 PM</p>
+    <p class="lastupdate">09/20/2020 02:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.8&#176;F</td>
+        <td class="data">88.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.840 inHg (-0.059)</td>
+        <td class="data">29.840 inHg (-0.057)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ESE (112&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
     </tbody>
   </table>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:57:53 PM">
-            88.8</span><br/>
+          <span title="02:03:41 PM">
+            88.9</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:57:53 PM (Sunday)">
-            88.8</span><br/>
+          <span title="02:03:41 PM (Sunday)">
+            88.9</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:57:53 PM" class="hival">
-            88.8</span>
+          <span title="02:03:41 PM" class="hival">
+            88.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:57:53 PM (Sunday)" class="hival">
-            88.8</span>
+          <span title="02:03:41 PM (Sunday)" class="hival">
+            88.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="06:15:22 AM">
             85</span><br/>
-          <span title="01:53:13 PM">
-            29</span>
+          <span title="01:59:01 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:15:22 AM (Sunday)">
             85</span><br/>
-          <span title="01:53:13 PM (Sunday)">
-            29</span>
+          <span title="01:59:01 PM (Sunday)">
+            28</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="02:26:00 AM">
             45</span><br/>
-          <span title="01:21:01 PM">
-            39</span>
+          <span title="02:02:01 PM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:26:00 AM (Sunday)">
             45</span><br/>
-          <span title="01:21:01 PM (Sunday)">
-            39</span>
+          <span title="02:02:01 PM (Sunday)">
+            38</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">60%</td>
+      <td class="data">56%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 6 hours, 12 minutes</td>
+      <td class="data">0 days, 6 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 6 hours, 12 minutes</td>
+      <td class="data">0 days, 6 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
