--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 02:09:00 PM</p>
+    <p class="lastupdate">09/20/2020 02:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">52.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.061)</td>
+        <td class="data">29.836 inHg (-0.060)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.6&#176;F</td>
+        <td class="data">81.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:29 PM">
-            89.5</span><br/>
+          <span title="02:13:45 PM">
+            89.7</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:08:29 PM (Sunday)">
-            89.5</span><br/>
+          <span title="02:13:45 PM (Sunday)">
+            89.7</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:29 PM" class="hival">
-            89.5</span>
+          <span title="02:13:45 PM" class="hival">
+            89.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:08:29 PM (Sunday)" class="hival">
-            89.5</span>
+          <span title="02:13:45 PM (Sunday)" class="hival">
+            89.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:45:01 AM">
             29.913</span><br/>
-          <span title="02:04:01 PM">
-            29.837</span>
+          <span title="02:10:01 PM">
+            29.836</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:45:01 AM (Sunday)">
             29.913</span><br/>
-          <span title="02:04:01 PM (Sunday)">
-            29.837</span>
+          <span title="02:10:01 PM (Sunday)">
+            29.836</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:01 PM">
-            81.6</span><br/>
+          <span title="02:13:01 PM">
+            81.7</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:08:01 PM (Sunday)">
-            81.6</span><br/>
+          <span title="02:13:01 PM (Sunday)">
+            81.7</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">73%</td>
+      <td class="data">51%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 6 hours, 22 minutes</td>
+      <td class="data">0 days, 6 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 6 hours, 22 minutes</td>
+      <td class="data">0 days, 6 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
