--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/20/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.0&#176;F</td>
+        <td class="data">91.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.3&#176;F</td>
+        <td class="data">51.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.824 inHg (-0.065)</td>
+        <td class="data">29.826 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">3 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.3&#176;F</td>
+        <td class="data">82.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:15 PM">
-            91.0</span><br/>
+          <span title="02:38:01 PM">
+            91.2</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:15 PM (Sunday)">
-            91.0</span><br/>
+          <span title="02:38:01 PM (Sunday)">
+            91.2</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:15 PM" class="hival">
-            91.0</span>
+          <span title="02:38:01 PM" class="hival">
+            91.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:15 PM (Sunday)" class="hival">
-            91.0</span>
+          <span title="02:38:01 PM (Sunday)" class="hival">
+            91.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:01 PM">
-            82.3</span><br/>
+          <span title="02:38:01 PM">
+            82.7</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:01 PM (Sunday)">
-            82.3</span><br/>
+          <span title="02:38:01 PM (Sunday)">
+            82.7</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">68%</td>
+      <td class="data">73%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 6 hours, 47 minutes</td>
+      <td class="data">0 days, 6 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 6 hours, 47 minutes</td>
+      <td class="data">0 days, 6 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
