--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 02:39:00 PM</p>
+    <p class="lastupdate">09/20/2020 02:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.826 inHg (-0.062)</td>
+        <td class="data">29.818 inHg (-0.069)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:01 PM">
-            91.2</span><br/>
+          <span title="02:43:29 PM">
+            91.3</span><br/>
           <span title="07:14:52 AM">
             51.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:38:01 PM (Sunday)">
-            91.2</span><br/>
+          <span title="02:43:29 PM (Sunday)">
+            91.3</span><br/>
           <span title="07:14:52 AM (Sunday)">
             51.3</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:01 PM" class="hival">
-            91.2</span>
+          <span title="02:43:29 PM" class="hival">
+            91.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:38:01 PM (Sunday)" class="hival">
-            91.2</span>
+          <span title="02:43:29 PM (Sunday)" class="hival">
+            91.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:45:01 AM">
             29.913</span><br/>
-          <span title="02:32:01 PM">
-            29.824</span>
+          <span title="02:42:01 PM">
+            29.817</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:45:01 AM (Sunday)">
             29.913</span><br/>
-          <span title="02:32:01 PM (Sunday)">
-            29.824</span>
+          <span title="02:42:01 PM (Sunday)">
+            29.817</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:38:01 PM">
-            82.7</span><br/>
+          <span title="02:42:01 PM">
+            83.1</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:38:01 PM (Sunday)">
-            82.7</span><br/>
+          <span title="02:42:01 PM (Sunday)">
+            83.1</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="02:26:00 AM">
             45</span><br/>
-          <span title="02:02:01 PM">
-            38</span>
+          <span title="02:40:01 PM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:26:00 AM (Sunday)">
             45</span><br/>
-          <span title="02:02:01 PM (Sunday)">
-            38</span>
+          <span title="02:40:01 PM (Sunday)">
+            37</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">73%</td>
+      <td class="data">60%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 6 hours, 52 minutes</td>
+      <td class="data">0 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 6 hours, 52 minutes</td>
+      <td class="data">0 days, 6 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
