--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/20/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">91.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.5&#176;F</td>
+        <td class="data">51.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.818 inHg (-0.068)</td>
+        <td class="data">29.818 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph SSE (158&#176;)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.5&#176;F</td>
+        <td class="data">83.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">37%</td>
+        <td class="data">36%</td>
       </tr>
     </tbody>
   </table>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:48:01 PM">
-            83.5</span><br/>
+          <span title="02:52:01 PM">
+            83.9</span><br/>
           <span title="08:10:00 AM">
             73.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:48:01 PM (Sunday)">
-            83.5</span><br/>
+          <span title="02:52:01 PM (Sunday)">
+            83.9</span><br/>
           <span title="08:10:00 AM (Sunday)">
             73.5</span>
         </td>
@@ -507,14 +507,14 @@
         <td class="data new_row hilo_day">
           <span title="02:26:00 AM">
             45</span><br/>
-          <span title="02:40:01 PM">
-            37</span>
+          <span title="02:51:01 PM">
+            36</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:26:00 AM (Sunday)">
             45</span><br/>
-          <span title="02:40:01 PM (Sunday)">
-            37</span>
+          <span title="02:51:01 PM (Sunday)">
+            36</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 07:10:02 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">64%</td>
+      <td class="data">34%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 7 hours, 2 minutes</td>
+      <td class="data">0 days, 7 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 7 hours, 2 minutes</td>
+      <td class="data">0 days, 7 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
